--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="col">
                     <div class="text-box">
                         <h5>Our Products</h5>
-                        <h1><b>Simplicity</b><br> is the <b>ultimate</b> sophisticated</h1>
+                        <h1><b>Simplicity</b><br> is the <b>ultimate</b> sophistication</h1>
 
                     </div>
                 </div>
@@ -37,9 +37,6 @@
 
             </div>
         </div>
-
-
-
 
     </body>
 </html>
