--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Website</title>
+        <meta name="viewpoint" content-type="width=device-width initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -10,9 +11,6 @@
                  <div class="logo">
                      <h1>Modern Sotho</h1>
                  </div>
-
-
-                
                 <nav>
                     <ul>
                         <li><a href="">Home</a></li>
@@ -25,6 +23,7 @@
                             <span></span>
                             <span></span>
                             <span></span>
+
                           </label>
                         </li> 
                     </ul>
