--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Website</title>
-        <meta name="viewpoint" content-type="width=device-width initial-scale=1">
+        
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -18,13 +21,12 @@
                         <li><a href="">Clothing</a></li>
                         <li><a href="">Shoes</a></li>
                         
-                       <li><label for="check">
+                        <li><label for="check">
                             <input type="checkbox" id="check"/> 
                             <span></span>
                             <span></span>
                             <span></span>
-
-                          </label>
+                          </label> 
                         </li> 
                     </ul>
                 </nav>
